syntax = "proto3";

package email_verify;

message VerifyRequest {
    string email = 1;
}

message VerifyResponse {}